@@ -406,6 +406,17 @@
             </listitem>
         </varlistentry>
         <varlistentry>
+            <term condition="pot">RepoBrowserTrySVNParentPath</term>
+            <listitem>
+                <para>
+                    The repository browser tries to fetch the web page that's
+                    generated by an SVN server configured with the SVNParentPath
+                    directive to get a list of all repositories. To disable that
+                    behavior, set this value to <literal>false</literal>.
+                </para>
+            </listitem>
+        </varlistentry>
+        <varlistentry>
             <term condition="pot">ScintillaDirect2D</term>
             <listitem>
                 <para>
