@@ -1,6 +1,8 @@
 Version 1.8.4
 - BUG: Issue 584: Revert from log dialog bottom pane
        fails if the file was deleted. (Sergey Azarkevich)
+- NEW: Issue #586: Option to disable SVNParentPath
+       handling in repo browser. (Stefan)
 
 Version 1.8.3
 - BUG: Issue #546: "Restore after commit" fails
